--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -15,6 +15,14 @@ https://templatemo.com/tm-542-new-vision
     
 */
 
+:root {
+    --title: #333;
+    --text: #666;
+    --hover: #09F;
+    --button: #C99;
+    --side-background: #ddd;
+}
+
 ul, h1, h2, h3, h4, p, figure {
     padding: 0;
     margin: 0;
