--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -16,11 +16,11 @@ https://templatemo.com/tm-542-new-vision
 */
 
 :root {
-    --title: #333;
-    --text: #666;
-    --hover: #09F;
-    --button: #C99;
-    --side-background: #ddd;
+    --dark-text: #333;
+    --reg-text: #666;
+    --accent-1: #09F;
+    --accent-2: #C99;
+    --light-bg-2: #ddd;
 }
 
 ul, h1, h2, h3, h4, p, figure {
@@ -31,7 +31,7 @@ ul, h1, h2, h3, h4, p, figure {
 body {
   font-family: 'Open Sans', Arial, sans-serif;
   font-size: 16px;
-  background-color: #ddd;
+  background-color: var(--light-bg-2);
   overflow-x: hidden;
 }
 
@@ -44,16 +44,16 @@ a:hover { text-decoration: none; }
 button:focus { outline: none; }
 
 h1, h2, h3 {
-    color: #333;
+    color: var(--dark-text);
     font-weight: 400;
 }
 
 p {
-    color: #666;
+    color: var(--reg-text);
     line-height: 1.9;
 }
 
-.tm-color-primary { color: #09F; }
+.tm-color-primary { color: var(--accent-1); }
 
 .navbar-toggler {
     padding: 10px 15px;
@@ -155,7 +155,7 @@ nav > ul > li { list-style: none; }
 .nav-item .tm-nav-link:hover,
 .nav-item.active .tm-nav-link {
     color: #000;
-    border-bottom: 5px solid #09F;
+    border-bottom: 5px solid var(--accent-1);
     border-left: none;
 }
 
@@ -175,7 +175,7 @@ nav > ul > li { list-style: none; }
     
     .nav-item .tm-nav-link:hover, 
     .nav-item.active .tm-nav-link {
-        border-left: 5px solid #09F;
+        border-left: 5px solid var(--accent-1);
         border-bottom: none;
     }
 }
@@ -242,7 +242,7 @@ nav > ul > li { list-style: none; }
 
 .tm-section-header {
     display: inline-block;
-    background-color: #c99;
+    background-color: var(--accent-2);
     color: white;
     padding: 30px 90px 30px 30px;
     margin: 0;
@@ -270,8 +270,8 @@ nav > ul > li { list-style: none; }
 
 .tm-welcome-row-2 { margin-bottom: 45px; }
 
-.tm-article-link:hover .tm-article-title { color: #09F; }
-.tm-hover-color { color: #09F; }
+.tm-article-link:hover .tm-article-title { color: var(--accent-1); }
+.tm-hover-color { color: var(--accent-1); }
 
 .tm-article-title {
     margin-bottom: 30px;
@@ -323,7 +323,7 @@ nav > ul > li { list-style: none; }
 }
 
 .tm-article-icon {
-    color: #C99;
+    color: var(--accent-2);
     margin-top: 20px;
     margin-bottom: 40px;
 }
@@ -342,7 +342,7 @@ nav > ul > li { list-style: none; }
 .tm-article-link { align-self: flex-end; }
 
 .tm-btn {
-    background-color: #C99;
+    background-color: var(--accent-2);
     color: white;
     padding: 10px 25px;
 }
@@ -380,7 +380,7 @@ nav > ul > li { list-style: none; }
     font-size: 30px;
     font-weight: 900;
     content: "\f068";
-    color: #ddd;
+    color: var(--light-bg-2);
     opacity: 1;
     width: 30px;
     transition: all 0.3s ease;
@@ -389,20 +389,20 @@ nav > ul > li { list-style: none; }
 .slick-dots li button:hover:before, 
 .slick-dots li button:focus:before,
 .slick-dots li.slick-active button:before {
-    color: #C99;
+    color: var(--accent-2);
 }
 
 footer {
-    color: #666;
+    color: var(--reg-text);
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: right;
 }
 
-footer a { color: #666; }
+footer a { color: var(--reg-text); }
 
 footer a:hover {
-    color: #09F;
+    color: var(--accent-1);
     text-decoration: none;
 }
 
@@ -551,7 +551,7 @@ figure.effect-honey:hover h4 i {
 .tm-about { max-width: 975px; }
 
 .tm-about-icon {
-    color: #09F;
+    color: var(--accent-1);
     min-width: 235px;
     display: flex;
     justify-content: center;
@@ -598,7 +598,7 @@ figure.effect-zoe p.icon-links a {
 
 figure.effect-zoe:hover p.icon-links a:hover,
 figure.effect-zoe:hover p.icon-links a:focus {
-	color: #09F;
+	color: var(--accent-1);
 }
 
 figure.effect-zoe p.description {
@@ -682,7 +682,7 @@ figure.effect-zoe:hover p.icon-links a:first-child {
 
 .tm-service-description {
     font-size: 1.1rem;
-    color: #09F;
+    color: var(--accent-1);
     text-align: center;
     margin-top: 20px;
 }
@@ -696,7 +696,7 @@ figure.effect-zoe:hover p.icon-links a:first-child {
     text-align: center;
     min-width: 125px;
     margin-right: 15px;
-    color: #09F;
+    color: var(--accent-1);
 }
 
 .tm-approach-row {
@@ -755,7 +755,7 @@ figure.effect-zoe:hover p.icon-links a:first-child {
 
 .tm-btn-primary {
     color: white;
-    background-color: #C99;
+    background-color: var(--accent-2);
     font-size: 1.2rem;
     padding: 12px 30px;
 }
@@ -766,7 +766,7 @@ figure.effect-zoe:hover p.icon-links a:first-child {
     background-color: #a64b4b;
 }
 
-.tm-link { color: #666; }
+.tm-link { color: var(--reg-text); }
 .tm-contact-box { padding: 65px; }
 
 .mapouter{
@@ -788,7 +788,7 @@ figure.effect-zoe:hover p.icon-links a:first-child {
 .tm-ul-hyphen li {
     list-style-type: none;
     line-height: 1.9;
-    color: #666;
+    color: var(--reg-text);
 }
 
 .tm-ul-hyphen li:before {
