--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -13,13 +13,15 @@ https://templatemo.com/tm-542-new-vision
     Hover: #09F (Blue)
     Button: #C99 (Pink)
     
+    #bababa light gray matching wood color palette
 */
 
 :root {
-    --dark-text: #333;
+    --dark-text: #292929;
     --reg-text: #666;
     --accent-1: #09F;
     --accent-2: #C99;
+    --light-bg-1: #d9e7e6;
     --light-bg-2: #ddd;
 }
 
@@ -62,7 +64,7 @@ p {
 
 .container-fluid {
     max-width: 1200px;
-    background-color: white;
+    background-color: var(--light-bg-1);
     padding-left: 40px;
     padding-right: 40px;
 }
@@ -190,7 +192,7 @@ nav > ul > li { list-style: none; }
 .tm-mobile-menu:focus {
   outline: none;
   box-shadow: none;
-  background-color: white;
+  background-color: var(--light-bg-1);
 }
 
 .tm-menu-container-outer {
@@ -224,7 +226,7 @@ nav > ul > li { list-style: none; }
         right: 0;
         top: 44px;
         z-index: 1000;
-        background-color: white;
+        background-color: var(--light-bg-1);
         margin: 0;
         min-width: 180px;
     }
@@ -236,7 +238,7 @@ nav > ul > li { list-style: none; }
         top: 50px;
         right: 0px;
         z-index: 1000;
-        background-color: white;
+        background-color: var(--light-bg-1);
     }
 }
 
