--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -20,7 +20,7 @@ https://templatemo.com/tm-542-new-vision
     --dark-text: #292929;
     --reg-text: #666;
     --accent-1: #09F;
-    --accent-2: #C99;
+    --accent-2: #264763;
     --light-bg-1: #d9e7e6;
     --light-bg-2: #ddd;
 }
