--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -100,9 +100,7 @@ p {
 }
 
 .tm-main-bg {
-    background-image: url(../img/new-vision-01.jpg);
-    background-repeat: no-repeat;
-    background-position: 45% top;
+    background-color: red;
     height: 800px;
     min-height: 500px;
     margin-left: -40px;
