--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -100,11 +100,18 @@ p {
 }
 
 .tm-main-bg {
-    background-color: red;
-    height: 800px;
-    min-height: 500px;
+    position:relative;
+    padding-top:56.25%;
     margin-left: -40px;
     margin-right: -40px;
+}
+
+.tm-main-bg > iframe {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
 }
 
 .tm-about-bg { background-image: url(../img/new-vision-02.jpg); }
