add red accent from palette

--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -19,7 +19,7 @@ https://templatemo.com/tm-542-new-vision
 :root {
     --dark-text: #292929;
     --reg-text: #666;
-    --accent-1: #09F;
+    --accent-1: #d34632;
     --accent-2: #264763;
     --light-bg-1: #d9e7e6;
     --light-bg-2: #ddd;
