--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -91,6 +91,7 @@ p {
 .tm-site-icon { padding: 10px; color: #999; }
 
 .tm-site-name {
+    text-align: center;
     text-transform: uppercase;
     font-size: 2rem;
     color: #999;
