--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -34,7 +34,7 @@ ul, h1, h2, h3, h4, p, figure {
 
 body {
   font-family: 'Open Sans', Arial, sans-serif;
-  font-size: 16px;
+  font-size: 1.4rem;
   background-color: var(--light-bg-2);
   overflow-x: hidden;
 }
