--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -558,7 +558,8 @@ figure.effect-honey:hover h4 i {
 }
 
 /* Our Company */
-.tm-about { max-width: 975px; }
+/* originally max-width 975px; only rule */
+.tm-about { max-width: 1050px; }
 
 .tm-about-icon {
     color: var(--accent-1);
