float images in media blocks left instead of using flexbox to allow for text wrapping

--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -290,9 +290,17 @@ nav > ul > li { list-style: none; }
 }
 
 .tm-media {
+    /* 
+    original styles in this class were only:
     display: flex;
     align-items: flex-start;
-    margin-bottom: 70px;
+    margin-bottom: 70px; 
+    */
+
+}
+
+.tm-media img {
+    float: left;
 }
 
 .tm-media-v-center { align-items: center; }
