--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -330,6 +330,10 @@ nav > ul > li { list-style: none; }
         margin-top: 20px;
     }
     
+    .tm-media-img-card {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .tm-dotted-box-container { margin-bottom: 35px; }
