--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -57,6 +57,13 @@ p {
     line-height: 1.5;
 }
 
+figure {
+    /* our board page */
+    width: 100%;
+    text-align: center;
+}
+
+
 .tm-color-primary { color: var(--accent-1); }
 
 .navbar-toggler {
