Our-Board- make hero image full width of its container to align with title

--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -63,6 +63,10 @@ figure {
     text-align: center;
 }
 
+figure > img {
+    width: 100%;
+}
+
 figcaption {
     color: var(--dark-text);
     text-align: left;
