use class for hero figure image so its styles are not applied to other figures

--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -57,13 +57,13 @@ p {
     line-height: 1.5;
 }
 
-figure {
+figure.hero {
     /* our board page */
     width: 100%;
     text-align: center;
 }
 
-figure > img {
+figure.hero > img {
     width: 100%;
 }
 
