Thrangu- make both images in double-column layout section same width

--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -616,6 +616,10 @@ figure.effect-honey:hover h4 i {
     max-width: 540px;
 }
 
+.tm-about-1 > img {
+    width: 100%;
+}
+
 /*---------------*/
 /***** Zoe *****/
 /*---------------*/
