--- a/modified/css/templatemo-new-vision.css
+++ b/modified/css/templatemo-new-vision.css
@@ -78,6 +78,10 @@ figcaption {
     padding: 20px 50px 60px;
 }
 
+.tm-sponsor-page-title {
+    margin-bottom: 15px;
+}
+
 .tm-color-primary { color: var(--accent-1); }
 
 .navbar-toggler {
