--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Help Tibetan Nuns</title>
+    <!-- data: {
+    date: 2013-01-22T23:53:36.000Z,
+    title: 'We Need Your Help!',
+    subtitle: '',
+    description: 'Our request to you...',
+    author: 'HTN Staff'
+  },
+ -->
+
+    <title>Help Tibetan Nuns | <%- title %></title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Merriweather:wght@900&display=swap"
         rel="stylesheet" />
@@ -127,11 +136,15 @@ https://templatemo.com/tm-542-new-vision
         <main>
             <!-- Welcome section -->
             <section class="tm-welcome">
+
+                <% if (title) { %>
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating">Welcome to New Vision</h2>
+                        <h2 class="tm-section-header tm-header-floating"><%- title %></h2>
                     </div>
                 </div>
+                <% } %>
+
 
                 <div class="row tm-welcome-row">
                     <div class="tm-about">
