--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -149,12 +149,9 @@ https://templatemo.com/tm-542-new-vision
                 <div class="row tm-welcome-row">
                     <div class="tm-about">
 
-                        <article>
-                            <!--CONTENT-->
-                        </article>
-                        <!-- <div class="col-12 tm-media tm-media-v-center">
-                            
-                        </div> -->
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <%- postHtml %>
+                        </div>
 
                     </div>
                 </div>
