--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -128,14 +128,11 @@ https://templatemo.com/tm-542-new-vision
             <!-- Welcome section -->
             <section class="tm-welcome">
 
-                <% if (title) { %>
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating"><%- title %></h2>
+                        <h2 class="tm-section-header tm-header-floating">Blog</h2>
                     </div>
                 </div>
-                <% } %>
-
 
                 <div class="row tm-welcome-row">
                     <div class="tm-about">
