--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Merriweather:wght@900&display=swap"
         rel="stylesheet" />
     <!-- https://fonts.google.com/specimen/Open+Sans?selection.family=Open+Sans -->
-    <link href="./css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
-    <link href="./slick/slick.css" rel="stylesheet" /> <!-- https://kenwheeler.github.io/slick/ -->
-    <link href="./slick/slick-theme.css" rel="stylesheet" />
-    <link href="./css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com -->
-    <link href="./css/templatemo-new-vision.css" rel="stylesheet" />
+    <link href="../css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
+    <link href="../slick/slick.css" rel="stylesheet" /> <!-- https://kenwheeler.github.io/slick/ -->
+    <link href="../slick/slick-theme.css" rel="stylesheet" />
+    <link href="../css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com -->
+    <link href="../css/templatemo-new-vision.css" rel="stylesheet" />
     <!--
 
 New Vision Template
@@ -157,10 +157,10 @@ https://templatemo.com/tm-542-new-vision
 
         </main>
     </div>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="slick/slick.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/templatemo-script.js"></script>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../slick/slick.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/templatemo-script.js"></script>
 </body>
 
 </html>
