remove , separating array values in template

--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -141,7 +141,7 @@ https://templatemo.com/tm-542-new-vision
                                 <a href="./${post.fileName.split('.')[0]}.html">
                                 ${post.title}
                             </a>
-                        </li>`) %>
+                        </li>`).join('') %>
                     </ul>
 
                 </div>
