update template for events

--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Help Tibetan Nuns | <%- title %></title>
+    <title>Help Tibetan Nuns | Events</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Merriweather:wght@900&display=swap"
         rel="stylesheet" />
@@ -128,20 +128,18 @@ https://templatemo.com/tm-542-new-vision
             <!-- Welcome section -->
             <section class="tm-welcome">
 
-                <% if (title) { %>
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating"><%- title %></h2>
+                        <h2 class="tm-section-header tm-header-floating">Events</h2>
                     </div>
                 </div>
-                <% } %>
 
 
                 <div class="row tm-welcome-row">
                     <div class="tm-about">
 
                         <div class="col-12 tm-media tm-media-v-center">
-                            <%- postHtml %>
+                            <%- eventsInfo %>
                         </div>
 
                     </div>
