--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -133,9 +133,9 @@
                 <div class="row tm-welcome-row">
                     <div class="tm-about">
 
-                        <div class="col-12 tm-media tm-media-v-center">
-                            <%- postHtml %>
-                        </div>
+                        <!-- <div class="col-12 tm-media tm-media-v-center"> -->
+                        <%- postHtml %>
+                        <!-- </div> -->
 
                     </div>
                 </div>
