--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -16,6 +16,11 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com -->
     <link href="../css/templatemo-new-vision.css" rel="stylesheet" />
 
+    <style>
+        img {
+            margin: 10px 10px;
+        }
+    </style>
 </head>
 
 <body>
