--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -18,7 +18,7 @@
 
     <style>
         img {
-            margin: 10px 10px;
+            margin-bottom: 60px;
         }
     </style>
 </head>
@@ -128,12 +128,12 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating">Events</h2>
+                        <h2 class="tm-section-header">Events</h2>
                     </div>
                 </div>
 
 
-                <div class="row tm-welcome-row">
+                <div class="row tm-welcome-row" style="margin-top: 40px;">
                     <div class="tm-about">
 
                         <%- eventsInfoHtml %>
