Blog post- adjust spacing

--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -124,13 +124,13 @@
                 <% if (title) { %>
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating"><%- title %></h2>
+                        <h2 class="tm-section-header"><%- title %></h2>
                     </div>
                 </div>
                 <% } %>
 
 
-                <div class="row tm-welcome-row">
+                <div class="row tm-welcome-row" style="margin-top: 40px;">
                     <div class="tm-about">
 
                         <%- postHtml %>
