Blog-posts- adjust spacing

--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -123,11 +123,11 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating">Blog</h2>
+                        <h2 class="tm-section-header">Blog</h2>
                     </div>
                 </div>
 
-                <div class="row tm-welcome-row">
+                <div class="row tm-welcome-row" style="margin-top: 40px;">
 
                     <ol style="list-style-type: none">
                         <%- posts.map(post => `<li style="padding: 1rem">
