--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -54,8 +54,8 @@
                                     <a class="nav-link dropdown-toggle tm-nav-link" data-toggle="dropdown" href="#"
                                         role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="../our-story.html">Our Story</a>
-                                        <a class="dropdown-item" href="../board.html">Our Board</a>
+                                        <a class="dropdown-item" href="../about/our-story.html">Our Story</a>
+                                        <a class="dropdown-item" href="../about/board.html">Our Board</a>
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
