--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -56,6 +56,9 @@
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item" href="../about/our-story.html">Our Story</a>
                                         <a class="dropdown-item" href="../about/board.html">Our Board</a>
+                                        <a class="dropdown-item" href="../about/call-to-action.html">
+                                            Call to Action
+                                        </a>
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
