--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -103,16 +103,16 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle tm-nav-link" href="#" data-toggle="dropdown"
                                         href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                        Misc
+                                        News
                                     </a>
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item" href="../blog/index.html">
                                             Blog
                                         </a>
-                                        <a class="dropdown-item" href="../misc/gallery.html">
+                                        <a class="dropdown-item" href="../news/gallery.html">
                                             Gallery
                                         </a>
-                                        <a class="dropdown-item" href="../misc/events.html">
+                                        <a class="dropdown-item" href="../news/events.html">
                                             Events
                                         </a>
 
