--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -86,6 +86,8 @@
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item" href="../help/sponsor.html">
                                             Sponsoring Nuns
+                                        </a> <a class="dropdown-item" href="../help/donate.html">
+                                            Donate
                                         </a>
 
 
