--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -35,7 +35,7 @@
                 <div class="col-12 tm-site-header-col">
                     <div class="tm-site-header-left">
                         <h1 class="tm-site-name">Help Tibetan Nuns, Inc.</h1>
-                        <div role="doc-subtitle" style="font-size:1.5rem; text-align: center; color: var(--reg-text)">
+                        <div role="doc-subtitle">
                             Supporting Tibetan
                             Buddhist Nuns of the
                             Himalayan Region</div>
