--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -47,8 +47,20 @@
 
                             <!-- Links -->
                             <ul class="nav nav-tabs">
+                                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                    <input type="hidden" name="cmd" value="_s-xclick">
+                                    <input type="hidden" name="hosted_button_id" value="V7CZQXJYQ89VC">
+
+                                    <!-- src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" -->
+                                    <input type="image"
+                                        src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0"
+                                        name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
+                                        width="1" height="1">
+                                </form>
+
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="../index.html">Home</a>
+                                    <a class="nav-link tm-nav-link" href="#">Home</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle tm-nav-link" data-toggle="dropdown" href="#"
