--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -125,7 +125,7 @@
             <section class="tm-welcome">
 
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12" style="text-align:center">
                         <h2 class="tm-section-header">Blog</h2>
                     </div>
                 </div>
