--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -125,7 +125,7 @@
 
                 <% if (title) { %>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12" style="text-align:center">
                         <h2 class="tm-section-header"><%- title %></h2>
                     </div>
                 </div>
