remove inline styling for blog and posts

--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -130,7 +130,7 @@
                     </div>
                 </div>
 
-                <div class="row tm-welcome-row" style="margin-top: 40px;">
+                <div class="row tm-welcome-row">
 
                     <ol style="list-style-type: none">
                         <%- posts.map(post => `<li style="padding: 1rem">
