--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -132,7 +132,7 @@
                 <% } %>
 
 
-                <div class="row tm-welcome-row" style="margin-top: 40px;">
+                <div class="row tm-welcome-row">
                     <div class="tm-about">
 
                         <%- postHtml %>
