--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -140,7 +140,7 @@
                 </div>
 
 
-                <div class="row tm-welcome-row" style="margin-top: 40px;">
+                <div class="row tm-welcome-row">
                     <div class="tm-about">
 
                         <%- eventsInfoHtml %>
