use new font for header in all pages

--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -8,7 +8,8 @@
 
     <title>Help Tibetan Nuns | <%- title %></title>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Merriweather:wght@900&display=swap"
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css?family=Langar|Open+Sans:400,800|Merriweather:wght@900&display=swap"
         rel="stylesheet" />
     <link href="../css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
     <link href="../slick/slick.css" rel="stylesheet" /> <!-- https://kenwheeler.github.io/slick/ -->
