add header image to all pages

--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -41,8 +41,12 @@
                         <div role="doc-subtitle">
                             Supporting Tibetan
                             Buddhist Nuns of the
-                            Himalayan Region</div>
+                            Himalayan Region
+                        </div>
                     </div>
+
+                    <img class="header-painted-wood" src="../media/painted-wood-cropped-3.png" alt="" />
+
 
                     <!--Navbar-->
                     <nav class="navbar navbar-expand-lg">
