increase size of first line of each entry in blog home page

--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -165,7 +165,7 @@
                     <ol style="list-style-type: none">
                         <%- posts.map(post => `<li style="padding: 1rem">
                             
-                                <a href="./${post.fileName.split('.')[0]}.html">
+                                <a href="./${post.fileName.split('.')[0]}.html" style="font-size: 1.6rem;">
                                 ${post.title}
                             </a>
                             <br>
