--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -189,10 +189,12 @@
             </section>
 
             <footer>
-                Copyright &copy; 2020 New Vision
+                <img id="footer-painted-wood" src="../media/painted-wood-cropped-3.png" alt="" />
 
-                - Design: <a href="https://templatemo.com" rel="sponsored" target="_parent"
-                    title="css templates">TemplateMo</a>
+                <p>
+                    Copyright &copy; 2020 New Vision - Design: <a href="https://templatemo.com" rel="sponsored"
+                        target="_parent" title="css templates">TemplateMo</a>
+                </p>
             </footer>
 
         </main>
