use padding provided by outermost container to apply to footer instead of having footer outside conatiner and using its own padding rule to match

--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -182,15 +182,15 @@
 
 
         </main>
-    </div>
-    <footer>
-        <img id="footer-painted-wood" src="../media/painted-wood-cropped-3.png" alt="" />
+        <footer>
+            <img id="footer-painted-wood" src="../media/painted-wood-cropped-3.png" alt="" />
 
-        <p>
-            Copyright &copy; 2020 New Vision - Design: <a href="https://templatemo.com" rel="sponsored" target="_parent"
-                title="css templates">TemplateMo</a>
-        </p>
-    </footer>
+            <p>
+                Copyright &copy; 2020 New Vision - Design: <a href="https://templatemo.com" rel="sponsored"
+                    target="_parent" title="css templates">TemplateMo</a>
+            </p>
+        </footer>
+    </div>
 
     <script src="../js/jquery-3.4.1.min.js"></script>
     <script src="../slick/slick.min.js"></script>
