--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -171,7 +171,11 @@
                 <div class="row tm-welcome-row">
 
                     <ol style="list-style-type: none">
-                        <%- posts.map(post => `<li style="padding: 1rem">
+                        <%- posts
+                        .sort((first, second) => {
+                            return first.date < second.date ? 1 : -1
+                        })
+                        .map(post => `<li style="padding: 1rem">
                             
                                 <a href="./${post.fileName.split('.')[0]}.html" style="font-size: 1.6rem;">
                                 ${post.title}
