--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -192,7 +192,7 @@
 
 
         </main>
-        <footer>
+        <footer class="tm-blog-footer">
             <img id="footer-painted-wood" src="../media/painted-wood-cropped-3.png" alt="" />
 
             <p>
