--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -171,7 +171,7 @@
 
 
                 <div class="row tm-welcome-row">
-                    <div class="tm-about">
+                    <div class="tm-featured">
 
                         <%- postHtml %>
 
