--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -171,7 +171,7 @@
 
 
                 <div class="row tm-welcome-row">
-                    <div class="tm-featured">
+                    <div class="tm-featured tm-blog-main">
 
                         <%- postHtml %>
 
