--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -42,7 +42,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 53" style="max-width: 480px;"
                                 fill="var(--dark-text)">
 
-                                <text x="5" y="40">
+                                <text x="5" y="40" style="font-size: 44px;">
                                     Help Tibetan Nuns, Inc.
                                 </text>
                             </svg>
