--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Help Tibetan Nuns | <%- title %></title>
+    <title>Help Tibetan Nuns | <%- title %>
+    </title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Langar|Open+Sans:400,800|Merriweather:wght@900&display=swap"
@@ -25,15 +26,12 @@
     <div class="container-fluid">
         <div class="tm-site-header">
 
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"
-                id="donate-btn-form-widescreen">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="V7CZQXJYQ89VC">
-
-                <!-- src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" -->
+            <form action="https://www.paypal.com/donate" method="post" target="_top" id="donate-btn-form-widescreen">
+                <input type="hidden" name="hosted_button_id" value="72MBFD3XEAHJY" />
                 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0"
-                    name="submit" alt="PayPal - The safer, easier way to pay online!">
-                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    name="submit" title="PayPal - The safer, easier way to pay online!"
+                    alt="Donate with PayPal button" />
+                <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
             </form>
             <div class="row">
                 <div class="col-12 tm-site-header-col">
@@ -139,16 +137,14 @@
 
                         </div>
 
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"
+                        <form action="https://www.paypal.com/donate" method="post" target="_top"
                             id="donate-btn-form-smallscreen">
-                            <input type="hidden" name="cmd" value="_s-xclick">
-                            <input type="hidden" name="hosted_button_id" value="V7CZQXJYQ89VC">
-
-                            <!-- src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" -->
+                            <input type="hidden" name="hosted_button_id" value="72MBFD3XEAHJY" />
                             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif"
-                                border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"
-                                height="1">
+                                border="0" name="submit" title="PayPal - The safer, easier way to pay online!"
+                                alt="Donate with PayPal button" />
+                            <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1"
+                                height="1" />
                         </form>
 
                     </nav>
@@ -162,21 +158,23 @@
             <section class="tm-welcome">
 
                 <% if (title) { %>
-                <div class="row">
-                    <div class="col-12" style="text-align:center">
-                        <h2 class="tm-section-header"><%- title %></h2>
+                    <div class="row">
+                        <div class="col-12" style="text-align:center">
+                            <h2 class="tm-section-header">
+                                <%- title %>
+                            </h2>
+                        </div>
                     </div>
-                </div>
-                <% } %>
+                    <% } %>
 
 
-                <div class="row tm-welcome-row">
-                    <div class="tm-featured tm-blog-main">
+                        <div class="row tm-welcome-row">
+                            <div class="tm-featured tm-blog-main">
 
-                        <%- postHtml %>
+                                <%- postHtml %>
 
-                    </div>
-                </div>
+                            </div>
+                        </div>
 
             </section>
 
