--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -124,14 +124,16 @@
                                         <a class="dropdown-item" href="../blog/index.html">
                                             Blog
                                         </a>
-                                        <a class="dropdown-item" href="../news/gallery.html">
+                                        <a class="dropdown-item" href="./news/gallery.html">
                                             Gallery
                                         </a>
-                                        <a class="dropdown-item" href="../news/events.html">
+                                        <a class="dropdown-item" href="./news/events.html">
                                             Events
                                         </a>
 
                                     </div>
+                                </li> <li class="nav-item">
+                                    <a class="nav-link tm-nav-link" href="../Contact">Contact</a>
                                 </li>
                             </ul>
 
