--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -124,10 +124,10 @@
                                         <a class="dropdown-item" href="../blog/index.html">
                                             Blog
                                         </a>
-                                        <a class="dropdown-item" href="./news/gallery.html">
+                                        <a class="dropdown-item" href="../news/gallery.html">
                                             Gallery
                                         </a>
-                                        <a class="dropdown-item" href="./news/events.html">
+                                        <a class="dropdown-item" href="../news/events.html">
                                             Events
                                         </a>
 
