--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -27,9 +27,11 @@
 
             <form action="https://www.paypal.com/donate" method="post" target="_top" id="donate-btn-form-widescreen">
                 <input type="hidden" name="hosted_button_id" value="72MBFD3XEAHJY" />
-                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0"
+                <button  class="paypal-btn big" border="0"
                     name="submit" title="PayPal - The safer, easier way to pay online!"
-                    alt="Donate with PayPal button" />
+                    alt="Donate with PayPal button">
+                Donate
+                </button>
                 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
             </form>
             <div class="row">
