--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -209,7 +209,7 @@
                                             aria-haspopup="true"
                                             aria-expanded="false"
                                         >
-                                            How To Help
+                                            Sponsor a Nun
                                         </a>
                                         <div class="dropdown-menu">
                                             <a
