BLOG- fix url to accomate problem on vercel where blog entries are not made in blog folder and links go to /blogTitle instead of /blog/blogTitle

--- a/editable/templates/blog-home.html
+++ b/editable/templates/blog-home.html
@@ -284,7 +284,7 @@
                             < second.date ? 1 : -1 }) .map(post=> `
                             <li style="padding: 1rem">
                                 <a
-                                    href="./${post.fileName.split('.')[0]}.html"
+                                    href="../blog/${post.fileName.split('.')[0]}.html"
                                     style="font-size: 1.6rem"
                                 >
                                     ${post.title}
