--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -32,6 +32,8 @@
         </style>
     </head>
 
+    <script src="instantpage-5.1.0.js" type="module" defer></script>
+
     <body>
         <!-- Page Header -->
         <div class="container-fluid">
