--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -22,6 +22,8 @@
         <link href="../css/templatemo-new-vision.css" rel="stylesheet" />
     </head>
 
+    <script src="instantpage-5.1.0.js" type="module" defer></script>
+
     <body>
         <!-- Page Header -->
         <div class="container-fluid">
