--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -22,7 +22,11 @@
         <link href="../css/templatemo-new-vision.css" rel="stylesheet" />
     </head>
 
-    <script src="instantpage-5.1.0.js" type="module" defer></script>
+    <script
+        src="../../node_modules/instant.page/instantpage.js"
+        type="module"
+        defer
+    ></script>
 
     <body>
         <!-- Page Header -->
