move scripts to head and add defer

--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -20,6 +20,11 @@
         <link href="../css/bootstrap.min.css" rel="stylesheet" />
         <!-- https://getbootstrap.com -->
         <link href="../css/templatemo-new-vision.css" rel="stylesheet" />
+        <script src="../js/instantpage.js" defer></script>
+        <script src="../js/jquery-3.4.1.min.js" defer></script>
+        <script src="../slick/slick.min.js" defer></script>
+        <script src="../js/bootstrap.min.js" defer></script>
+        <script src="../js/templatemo-script.js" defer></script>
     </head>
 
     <body>
@@ -391,10 +396,5 @@
                 </p>
             </footer>
         </div>
-        <script src="../js/instantpage.js"></script>
-        <script src="../js/jquery-3.4.1.min.js"></script>
-        <script src="../slick/slick.min.js"></script>
-        <script src="../js/bootstrap.min.js"></script>
-        <script src="../js/templatemo-script.js"></script>
     </body>
 </html>
