--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -30,6 +30,12 @@
                 margin: 10px 0;
             }
         </style>
+
+        <script src="../js/instantpage.js" defer></script>
+        <script src="../js/jquery-3.4.1.min.js" defer></script>
+        <script src="../slick/slick.min.js" defer></script>
+        <script src="../js/bootstrap.min.js" defer></script>
+        <script src="../js/templatemo-script.js" defer></script>
     </head>
 
     <body>
@@ -397,10 +403,5 @@
                 </p>
             </footer>
         </div>
-        <script src="../js/instantpage.js"></script>
-        <script src="../js/jquery-3.4.1.min.js"></script>
-        <script src="../slick/slick.min.js"></script>
-        <script src="../js/bootstrap.min.js"></script>
-        <script src="../js/templatemo-script.js"></script>
     </body>
 </html>
