rename ids for donate buttons

--- a/src/_includes/partials/donate-btn-widescreen.html
+++ b/src/_includes/partials/donate-btn-widescreen.html
@@ -2,7 +2,7 @@
     action="https://www.paypal.com/donate"
     method="post"
     target="_top"
-    id="donate-btn-form-widescreen"
+    id="donate-btn-widescreen"
 >
     <input type="hidden" name="hosted_button_id" value="72MBFD3XEAHJY" />
     <button
