--- a/src/css/templatemo-new-vision.css
+++ b/src/css/templatemo-new-vision.css
@@ -90,18 +90,18 @@ img {
     margin-bottom: 10px;
 }
 
-#donate-btn-form-widescreen {
+#donate-btn-widescreen {
     position: absolute;
     top: 22px;
     right: 20px;
     z-index: 100;
 }
 
-#donate-btn-form-smallscreen {
+#donate-btn-smallscreen {
     display: none;
 }
 
-#donate-btn-form-widescreen > input[type='image'] {
+#donate-btn-widescreen > input[type='image'] {
     width: 160px;
 }
 
@@ -403,15 +403,15 @@ figcaption {
         padding-top: 30px;
         padding-bottom: 30px;
     }
-    #donate-btn-form-widescreen {
+    #donate-btn-widescreen {
         display: none;
     }
-    #donate-btn-form-smallscreen {
+    #donate-btn-smallscreen {
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
-    #donate-btn-form-smallscreen > input[type='image'] {
+    #donate-btn-smallscreen > input[type='image'] {
         width: 120px;
     }
 }
