use layout by default with header and footer

--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -53,7 +53,7 @@
                     <!-- Links -->
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link tm-nav-link" href="#">Home</a>
+                            <a class="nav-link tm-nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link tm-nav-link" href="/about/"
