update links to media

--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -23,7 +23,7 @@
 
             <img
                 class="header-painted-wood"
-                src="./media/painted-wood-cropped-4.png"
+                src="/media/painted-wood-cropped-4.png"
                 alt=""
             />
 
