--- a/src/editable/editable/templates/events.html
+++ b/src/editable/editable/templates/events.html
@@ -105,7 +105,7 @@
 
                         <img
                             class="header-painted-wood"
-                            src="../media/painted-wood-cropped-4.png"
+                            src="/media/painted-wood-cropped-4.png"
                             alt=""
                         />
 
@@ -387,7 +387,7 @@
                 <!--End mc_embed_signup-->
                 <img
                     id="footer-painted-wood"
-                    src="../media/painted-wood-cropped-3.png"
+                    src="/media/painted-wood-cropped-3.png"
                     alt=""
                 />
 
