convert blog to use eleventy approach (links do not work yet on blog home page)

--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -10,6 +10,6 @@
     <% } %>
 
     <div class="row tm-welcome-row">
-        <div class="tm-featured tm-blog-main"><%- postHtml %></div>
+        <div class="tm-featured tm-blog-main">{% block content %}</div>
     </div>
 </section>
