--- a/src/_includes/top-level.html
+++ b/src/_includes/top-level.html
@@ -132,7 +132,7 @@
       </footer>
     </div>
 
-    {% include "partials/notification.html" %}
+    <!-- {% include "partials/notification.html" %}
 
     <script>
       var notificationEl = document.getElementById("notification");
@@ -158,6 +158,6 @@
         localStorage.setItem("eventNotification", Date.now());
         displayNotification();
       }
-    </script>
+    </script> -->
   </body>
 </html>
